Getting spacing correct for colour palletts

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,23 +10,7 @@
 
 body {
     font-family: 'Zen Loop', cursive;
-    background-color: #fffff0;
     color: black;
-}
-
-.rotate {
-    transform: rotate(-20deg);
-    /* Safari */
-    -webkit-transform: rotate(-20deg);
-
-    /* Firefox */
-    -moz-transform: rotate(-20deg);
-
-    /* IE */
-    -ms-transform: rotate(-20deg);
-
-    /* Opera */
-    -o-transform: rotate(-20deg);
 }
 
 /* 
@@ -115,7 +99,7 @@ body {
 }
 
 .about-me-sm {
-    background-color: #fffff0;
+    background-color: #fcc8b2;
 }
 
 /* 
@@ -133,8 +117,9 @@ body {
 .about-me-heading {
     font-size: 5rem;
     font-family: 'Oooh Baby', cursive;
-    margin-top: 10rem;
-    margin-bottom: 10rem;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+    background-color: pink;
 }
 
 /* 
@@ -191,7 +176,7 @@ body {
 */
 
 .cursive-about-me-text-lg {
-    margin-top: 7rem;
+    padding-top: 7rem;
     font-family: 'Oooh Baby', cursive;
     font-size: 1.8rem;
 }
@@ -216,6 +201,10 @@ body {
 .blend-background-lg {
     position: absolute;
     background-image: linear-gradient(to bottom, rgba(255, 255, 240, 1), rgba(255, 255, 240, 0));
+}
+
+.about-me-colour {
+    background-color: green;
 }
 
 /* 
@@ -250,6 +239,10 @@ body {
 
 .card-body > h5 {
     font-size: 1.7rem;
+}
+
+.btn {
+    background-color: #2e294e;
 }
 
 /* 
@@ -397,7 +390,6 @@ body {
     background-size: cover;
     background-position: center;
     transform: scaleX(-1);
-    z-index: -2;
     box-shadow: 0px 0px 20px 20px #fffff0 inset;
 }
 
@@ -430,7 +422,7 @@ body {
 
 .offerings-text-container > a {
     text-decoration: none;
-    color: black;
+    color: #2e294e;
 }
 
 /* 
